test/files/neg/t6771b.check
t6771b.scala:12: error: type mismatch;
 found   : x.type (with underlying type String)
 required: Test.a.type
  b = b match { case x => x }
                          ^
one error found
